apps/paperless-ngx/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-ngx
  namespace: media
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  template:
    spec:
      dnsPolicy: ClusterFirst
      containers:
        - name: paperless-ngx
          image: ghcr.io/paperless-ngx/paperless-ngx:1.9.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /usr/src/paperless/data
            - name: media
              mountPath: /usr/src/paperless/media
            - name: export
              mountPath: /usr/src/paperless/export
            - name: consume
              mountPath: /usr/src/paperless/consume
            - name: tmpfs
              mountPath: /tmp
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 10
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 10
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 30
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
          resources:
            requests:
              memory: "816Mi"
              cpu: "15m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: paperless-ngx-data
        - name: media
          nfs:
            server: ""
            path: ""
        - name: export
          nfs:
            server: ""
            path: ""
        - name: consume
          nfs:
            server: ""
            path: ""
        - name: tmpfs
          emptyDir:
            medium: Memory
            sizeLimit: 1Gi
      securityContext:
        fsGroup:
