apps/paperless-ngx/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ngx
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1Gi
spec:
  rules:
    - host: ""
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: paperless-ngx
                port:
                  number: 8000
  tls:
    - hosts:
        - ""
      secretName: paperless-ngx-tls-ingress
